# ops-qa-bot

./: .gitignore  README.md  config.example.toml  pyproject.toml  run.py  run_server.py  run_ws.py
deploy/: README.md  ops-qa-bot.service
docs/: INDEX.md
ops_qa_bot/: __init__.py  bot.py  cli.py  config.py  feishu_core.py  feishu_crypto.py  feishu_format.py  feishu_server.py  health_server.py  logging_config.py  prompt.py  ws_server.py
