[project]
name = "ops-qa-bot"
version = "0.1.0"
description = "基于 Claude Agent SDK 的内部运维文档问答机器人"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.65",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "cachetools>=5.3",
    "cryptography>=41.0",
]

[tool.uv]
package = false
